--- a/alpha/flaskr/templates/parametres.html
+++ b/alpha/flaskr/templates/parametres.html
@@ -23,12 +23,10 @@
         <div class="settings-list">
             <div class="setting-item">
                 <span class="setting-name">Apparence</span>
-                <div class="custom-select" style="width:200px;">
-                    <select id="color-page">
-                        <option value="white">Clair</option>
-                        <option value="dark">Foncé</option>
-                    </select>
-                </div>
+                <select id="color-page">
+                    <option value="white">☀️ Clair</option>
+                    <option value="dark">🌙 Foncé</option>
+                </select>
             </div>
             <div class="setting-item">
                 <span class="setting-name">Géolocalisation</span>
@@ -120,5 +118,6 @@
             <p id="userPrenom">Prénom : ...</p>
         </div>
     </div>   
+
 </body>
 </html>
