--- a/alpha/flaskr/templates/albumquests.html
+++ b/alpha/flaskr/templates/albumquests.html
@@ -16,12 +16,14 @@
         <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp">
         <h2 class="username"> {{ current_user.username }} </h2>
         <div class="Name-page">Album</div>
+    </header>
+    <div class="toggle-container">
         <input id="toggle" class="toggle" type="checkbox" role="switch" name="toggle" value="on">
-        <label for="toggle" class="slot">
+        <div class="slot">
             <span class="slot__label">PHOTO</span>
             <span class="slot__label">QUESTS</span>
-        </label>
-    </header>
+        </div>
+    </div> 
 
     <div class="listealbum">
         <div class="grid-item">Album de quêtes perso</div>
