debut trad mais pas encore concluant

--- a/alpha/flaskr/templates/parametres.html
+++ b/alpha/flaskr/templates/parametres.html
@@ -10,6 +10,7 @@
     <script src="../static/js/reglage.js"></script>
     <script src="../static/js/theme.js"></script>
     <script src="../static/js/profil.js"></script>
+    <script src="../static/js/langue.js"></script>
 </head>
 <body class="slide-out" data-page="page5">
     <header>
@@ -19,11 +20,11 @@
     </header>
 
     <main>
-        <h3>Application</h3>
+        <h3 id="applicationparametre" data-translate="applicationParametre">Application</h3>
         <div class="settings-list">
             <div class="setting-item">
                 <span class="setting-name">Apparence</span>
-                <select id="color-page">
+                <select id="color-page" class="color-page">
                     <option value="white">☀️ Clair</option>
                     <option value="dark">🌙 Foncé</option>
                 </select>
@@ -119,5 +120,9 @@
         </div>
     </div>   
 
+
+
+    <script>
+    </script>
 </body>
 </html>
