--- a/alpha/flaskr/static/css/page-parametre.css
+++ b/alpha/flaskr/static/css/page-parametre.css
@@ -340,3 +340,20 @@ select{
     1px 1.5em;
   background-repeat: no-repeat;
 }
+select:focus {
+  background-image:
+    linear-gradient(45deg, green 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, green 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 15px) 1em,
+    calc(100% - 20px) 1em,
+    calc(100% - 2.5em) 0.5em;
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
+  border-color: green;
+  outline: 0;
+}
