--- a/alpha/flaskr/templates/discussion.html
+++ b/alpha/flaskr/templates/discussion.html
@@ -15,9 +15,9 @@
             <li class="message {% if message.sender_id == current_user.id %}sent{% else %}received{% endif %}">
                 <small>{{ message.format_created_at() }}</small> 
                 {% if message.sender_id == current_user.id %}
-                    (You)
+                    (You) 
                 {% endif %}
-                    {{ message.sender.username }}: {{ message.text }} <br> 
+                {{ message.sender.username }}: {{ message.text }} <br> 
             </li>
         {% endfor %}
     </ul>
@@ -43,5 +43,47 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <script>
+        var socket = io();
+        var user_id = "{{ current_user.id }}";  // Récupérer l'ID utilisateur depuis le serveur Flask
+    
+        var form = document.getElementById("form");
+        var input = document.getElementById("message_input");
+    
+        form.addEventListener("submit", function (e) {
+            e.preventDefault();
+            if (input.value.trim() !== "") {
+                socket.emit("message", {
+                    text: input.value,
+                    sender_id: user_id,
+                    receiver_id: "{{ user_id }}"  // L'ID de l'utilisateur avec qui vous discutez
+                });
+                input.value = "";
+            }
+        });
+    
+        socket.on("message", function (data) {
+            var item = document.createElement("li");
+            var currentTime = formatDateToLocalTime(data.created_at);
+    
+            if (data.sender_id === user_id) {
+                item.classList.add("message", "sent");
+                item.innerHTML = "<small>" + currentTime + "</small> (You) " + data.text + "<br>";
+            } else {
+                item.classList.add("message", "received");
+                item.innerHTML = "<small>" + currentTime + "</small> " + data.text + "<br>";
+            }
+    
+            document.getElementById("messages").appendChild(item);
+            window.scrollTo(0, document.body.scrollHeight);
+        });
+    
+        function formatDateToLocalTime(utcDateString) {
+            var localDate = new Date(utcDateString);
+            return localDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+        }
+    </script>    
 </body>
 </html>
