--- a/alpha/flaskr/templates/discussion.html
+++ b/alpha/flaskr/templates/discussion.html
@@ -31,7 +31,7 @@
 
 
     <!-- Your message -->
-  <div class="chat-message-container">
+  <div class="chat-message-container-you">
     <div class="chat-message you">
       <span class="username">(You) JohnDoe:</span>
       <p>This is my message</p>
